--- a/KB.Repository/KB.Repository.csproj
+++ b/KB.Repository/KB.Repository.csproj
@@ -57,13 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Articles\IArticleRepository.cs" />
+    <Compile Include="Articles\IArticlesTagsRelationRepository.cs" />
     <Compile Include="DbContextFactory.cs" />
     <Compile Include="IRepositoryBase.cs" />
+    <Compile Include="KnowlegeBases\IKnowlegeBaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ArticleRepository.cs" />
-    <Compile Include="Repositories\ArticlesTagsRelationRepository.cs" />
-    <Compile Include="Repositories\KnowlegeBaseRepository.cs" />
-    <Compile Include="Repositories\TagRepository.cs" />
+    <Compile Include="Articles\ArticleRepository.cs" />
+    <Compile Include="Articles\ArticlesTagsRelationRepository.cs" />
+    <Compile Include="KnowlegeBases\KnowlegeBaseRepository.cs" />
+    <Compile Include="Tags\ITagRepository.cs" />
+    <Compile Include="Tags\TagRepository.cs" />
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="RepositoryIocInitializer.cs" />
   </ItemGroup>
