--- a/KB.Domain/KB.Domain.csproj
+++ b/KB.Domain/KB.Domain.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="DbContextFactory.cs" />
     <Compile Include="Entities\Article.cs" />
-    <Compile Include="Entities\ArticleTags.cs" />
+    <Compile Include="Entities\ArticleTag.cs" />
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Comm100System.cs" />
     <Compile Include="Entities\KBEntity.cs" />
