--- a/KB.WebApi/packages.config
+++ b/KB.WebApi/packages.config
@@ -6,6 +6,7 @@
   <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Handlebars.Net" version="1.9.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net452" />
