--- a/KB.WebApi/packages.config
+++ b/KB.WebApi/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net452" />
+  <package id="DotLiquid" version="2.0.99" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Handlebars.Net" version="1.9.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
